--- a/client/src/views/Profile.module.css
+++ b/client/src/views/Profile.module.css
@@ -35,15 +35,20 @@
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 4rem;
+    width: 30%;
+    margin-inline: auto;
 }
 
 .skills p {
     margin-inline: auto;
-    margin-bottom: 1rem;
 }
 
-.skills li {
+ul {
     font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
 }
 .description {
     font-size: 1.25rem;
