--- a/client/src/views/Profiles.module.css
+++ b/client/src/views/Profiles.module.css
@@ -13,15 +13,20 @@
 .createProfile {
     position: fixed;
     bottom: 0;
-    right: 47.9%;
+    right: 48.5%;
     bottom: 1.25rem;
-    padding: .15rem .9rem .4rem;
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 50%;
     background-color: black;
     color: white;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 900;
+    margin-inline: auto;
 }
 
 .createProfile:hover {
